middleware/temporal/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temporal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: temporal
  template:
    metadata:
      labels:
        app: temporal
    spec:
      containers:
        - name: temporal-container
          image: localhost:5001/dockerbogo/docker-nginx-hello-world
          ports:
            - containerPort: 8080
