middleware/temporal/manifests/k8s-temporal-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temporal-server
  labels:
    app: temporal-server
spec:
  replicas: 1
  template:
    metadata:
      name: temporal-server
      labels:
        app: temporal-server
    spec:
      containers:
        - name: temporal-server
          image: docker.io/temporalio/auto-setup:1.29.2
          ports:
            - containerPort: 7233
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  selector:
    matchLabels:
      app: temporal-server
