middleware/temporal/manifests/k8s-temporal-ui.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temporal-ui
  labels:
    app: temporal-ui
spec:
  replicas: 1
  template:
    metadata:
      name: temporal-ui
      labels:
        app: temporal-ui
    spec:
      containers:
        - name: temporal-ui
          image: docker.io/temporalio/ui:2.44.0
          ports:
            - containerPort: 8080
      restartPolicy: Always
  selector:
    matchLabels:
      app: temporal-ui
