middleware/temporal/manifests/k8s-temporal-service.yml
apiVersion: v1
kind: Service
metadata:
  name: temporal-frontend
  labels:
    app: temporal-frontend
spec:
  type: NodePort
  externalTrafficPolicy: Cluster
  ports:
    - port: 7233
      nodePort: 30950
      name: frontend
      protocol: TCP
  selector:
    app: temporal-server
---
apiVersion: v1
kind: Service
metadata:
  name: temporal-ui-service
  labels:
    app: temporal-ui-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: temporal-ui
